@@ -1,3 +1,9 @@
+2006-06-15  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* hello-mt.c (trivfs_S_io_seek): Seek into the right direction for
+	`SEEK_END'.  Return EINVAL if file pointer would become negative.
+	* hello.c (trivfs_S_io_seek): Likewise.
+
 2006-03-25  Thomas Schwinge  <tschwinge@gnu.org>
 
 	[bug #15808]
